# 2D-Game-Engine

./: .gitignore  CMakeLists.txt  README.md  test
src/: Engine.cpp  Engine.h  Input.cpp  Input.h  MyAssetManager.cpp  MyAssetManager.h  MyCamera2D.cpp  MyCamera2D.h  MyRenderer2D.cpp  MyRenderer2D.h  Transform.h
src/ECS/: Components.h  Entity.h  Systems.cpp  Systems.h  World.cpp  World.h
src/Scene/: EngineContext.h  GameScene.cpp  GameScene.h  MenuScene.cpp  MenuScene.h  Scene.h  SceneManager.cpp  SceneManager.h
